--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <title>Abstract Clock - p5.js</title>
+    <style> 
+      body {
+        padding: 0; 
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background: #1a1a2e;
+      }
+    </style>
     <script src="p5.min.js"></script>
     <script src="sketch.js"></script>
   </head>
